--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -24,10 +24,19 @@
                         Fixed custom loan repayment amount and loan repayments on front-end.
                     </li>
                     <li class="list-group-item">
-                        Made dropdown panels in turn based games 100% view height.
+                        Made dropdown panels in turn based games 90% view height.
                     </li>
                     <li class="list-group-item">
                         Added all player's numbers to main screen regardless of who's turn it is.
+                    </li>
+                    <li class="list-group-item">
+                        Can switch to view other players mid-game to perform actions on that player, keeping the current player's turn saved.
+                    </li>
+                    <li class="list-group-item">
+                        Can declare draws in games. This will delete the game and not increase any player's win counts.
+                    </li>
+                    <li class="list-group-item">
+                        Removed card actions. A new implementation of these will be added in the future.
                     </li>
                 </ul>
             </div>
