An action list can be built using the config and JSON files #1

--- a/MonopHelper/Pages/Cards/Actions/Index.cshtml
+++ b/MonopHelper/Pages/Cards/Actions/Index.cshtml
@@ -11,5 +11,8 @@
     </div>
     <div class="card-body bg-light">
         <p class="text-center"><b>Coming Soon</b></p>
+        <form method="post">
+            <button class="btn btn-danger">Test</button>
+        </form>
     </div>
 </div>
